--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "knex": "^3.1.0",
+    "openai": "^6.7.0",
     "pg": "^8.16.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "@types/pg": "^8.15.6",
+    "@types/qrcode-terminal": "^0.12.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
