--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "seed:run": "knex --knexfile src/database/knexfile.ts seed:run"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "knex": "^3.1.0",
+    "openai": "^6.7.0",
     "pg": "^8.16.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
