--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "@types/qrcode-terminal": "^0.12.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "type": "module"
 }
